@@ -23,6 +23,7 @@ CSFILES = \
 	$(srcdir)/AppStyle.cs \
 	$(srcdir)/AppStyleInfo.cs \
 	$(srcdir)/AssemblyInfo.cs \
+	$(srcdir)/AvatarSelector.cs \
 	$(srcdir)/NotificationArea.cs \
 	$(srcdir)/TrayLib.cs \
 	$(srcdir)/MessageStore.cs \
